# qtopengl

./: CMakeLists.txt  README.md  main.cpp
shader/: triangle.frag  triangle.vert
src/: Scene.cpp  Scene.h  openglwindow.cpp  openglwindow.h
